# CMake-STM32f401RE

./: .gitignore  CMakeLists.txt  build.sh  linker.ld  toolchain.cmake
src/: main.c
